--- a/nav-bar-user/sample-html.html
+++ b/nav-bar-user/sample-html.html
@@ -11,7 +11,7 @@
 
     <style>
         /*   <!-- COPY THIS 2--> */
-        nav-placeholder {
+        #nav-placeholder {
             position: sticky;
             top: 0;
             z-index: 1000;
