--- a/profile management/applicant-identity.html
+++ b/profile management/applicant-identity.html
@@ -40,14 +40,14 @@
     <span class="badge bg-secondary badge-width mx-1 my-1">Employment Status</span>
 
   </div>
+
+
+
+
   <!-- FORM CONTAINER -->
   <div class="container-fluid d-flex justify-content-center flex-wrap mt-3">
-
-
-
-
-    <form class="row g-8 needs-validation">
-    <div class="container">
+    <form class="row g-8">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-12">
           <div class="form-box">
@@ -118,12 +118,16 @@
           </div>
         </div>
       </div>
+
+
+      
     </div>
+ 
+
+
+
     </form>
-
-
-
-  </div>
+    
 
 
 
